# SamarisOSMountainLake

./: .gitignore  LICENSE  README.md  run.sh
builder/content/volt-adaptive-system-config/: ARCHITECTURE.md  Cargo.toml  EXPLAIN.md  POLICIES.md  PROFILES.md  README.md  SAFETY.md  SPEC.md
builder/content/volt-adaptive-system-config/examples/: dry_run.rs  explain.rs  generate.rs  probe.rs
builder/content/volt-adaptive-system-config/scripts/: check.sh  generate-example.sh  test.sh
builder/content/volt-adaptive-system-config/src/: lib.rs  main.rs  prelude.rs
builder/content/volt-adaptive-system-config/src/budget/: cpu_budget.rs  mod.rs  ram_budget.rs  reconciliation.rs  storage_budget.rs  system_budget.rs
builder/content/volt-adaptive-system-config/src/classify/: boot_medium.rs  machine_class.rs  mod.rs  profile_kind.rs  workload_class.rs
builder/content/volt-adaptive-system-config/src/config/: loader.rs  mod.rs  overrides.rs  schema.rs  validation.rs
builder/content/volt-adaptive-system-config/src/core/: asc.rs  error.rs  lifecycle.rs  mod.rs  result.rs  state.rs
builder/content/volt-adaptive-system-config/src/explain/: decision.rs  diff.rs  mod.rs  reason.rs  report.rs
builder/content/volt-adaptive-system-config/src/generator/: desktop_config.rs  generated_config.rs  kernel_b_config.rs  mod.rs  orbit_config.rs  toml_writer.rs  (+3 more)
builder/content/volt-adaptive-system-config/tests/: budget_tests.rs  classifier_tests.rs  config_tests.rs  explain_tests.rs  generator_tests.rs  hardware_probe_tests.rs  policy_tests.rs  reconciliation_tests.rs  validation_tests.rs
builder/content/volt-bench/: Cargo.toml
builder/content/volt-bench/src/: cli.rs  environment.rs  errors.rs  export.rs  hardware.rs  lib.rs  main.rs  reporter.rs  runner.rs  scorer.rs  storage.rs
builder/content/volt-display-manager/: ACCEPTANCE_CRITERIA.md  ARCHITECTURE.md  Cargo.toml  README.md  ROADMAP.md  TROUBLESHOOTING.md
builder/content/volt-display-manager/examples/: display.generated.toml  display.user.toml  xrandr-sample-output.txt
builder/content/volt-display-manager/src/: lib.rs  main.rs
builder/content/volt-display-manager/udev/: 99-volt-display.rules
builder/content/volt-dynamic-worker-pool/: Cargo.toml  README.md  config.example.toml
builder/content/volt-dynamic-worker-pool/benches/: orbit_burst_bench.rs  queue_bench.rs  scaling_bench.rs  scheduling_bench.rs  worker_spawn_bench.rs  yield_point_bench.rs
builder/content/volt-dynamic-worker-pool/docs/: ARCHITECTURE.md  INTEGRATION_PLAN.md  PERFORMANCE.md  SAFETY.md  SCHEDULING.md  SPEC.md
builder/content/volt-dynamic-worker-pool/examples/: adapter_demo.rs  adaptive_scaling.rs  background_jobs.rs  basic_pool.rs  desktop_guard.rs  metrics_snapshot.rs  orbit_burst.rs
builder/content/volt-dynamic-worker-pool/scripts/: bench.sh  flamegraph.sh  profile.sh  test.sh
builder/content/volt-dynamic-worker-pool/src/: lib.rs  main.rs  prelude.rs
builder/content/volt-dynamic-worker-pool/tests/: adapter_contract_tests.rs  config_tests.rs  desktop_guard_tests.rs  fairness_tests.rs  hardware_probe_tests.rs  invariants_tests.rs  job_tests.rs  metrics_tests.rs  orbit_burst_tests.rs  preemption_tests.rs  priority_tests.rs  scaling_tests.rs  worker_lifecycle_tests.rs
builder/content/volt-gpu-manager/: Cargo.toml  README.md  config.example.toml
builder/content/volt-gpu-manager/benches/: compression_bench.rs  resource_table_bench.rs  restore_bench.rs  sbp_gpu_bench.rs  scheduler_bench.rs  shader_cache_bench.rs
builder/content/volt-gpu-manager/docs/: ARCHITECTURE.md  PERFORMANCE.md  SAFETY.md  SBP_GPU.md  SHADERS.md  SPEC.md  THERMAL.md  VRAM_RESIDENCY.md
builder/content/volt-gpu-manager/examples/: allocate_resource.rs  compress_restore_resource.rs  compute_job.rs  gpu_status.rs  metrics_snapshot.rs  render_frame.rs  shader_warmup.rs
builder/content/volt-gpu-manager/scripts/: bench.sh  check.sh  generate-shader-cache.sh  test.sh
builder/content/volt-gpu-manager/src/: lib.rs  main.rs  prelude.rs
builder/content/volt-gpu-manager/tests/: backend_tests.rs  compressed_pool_tests.rs  config_tests.rs  dedup_tests.rs  device_probe_tests.rs  invariants_tests.rs  metrics_tests.rs  resource_table_tests.rs  sbp_gpu_tests.rs  scheduler_tests.rs  shader_cache_tests.rs  thermal_tests.rs  vram_residency_tests.rs
builder/content/volt-kernel-b/: Cargo.toml  README.md  build.rs
builder/content/volt-kernel-b/benches/: boot_bench.rs  command_bench.rs  compute_bench.rs  ipc_bench.rs  media_bench.rs  scheduler_bench.rs
builder/content/volt-kernel-b/examples/: basic_command.rs  compute_task.rs  media_task.rs  render_rect.rs
builder/content/volt-kernel-b/schemas/: sbp.fbs
builder/content/volt-kernel-b/src/: lib.rs  main.rs
builder/content/volt-kernel-b/tests/: boot_tests.rs  command_tests.rs  compute_tests.rs  full_integration.rs  gpu_tests.rs  integration_tests.rs  ipc_tests.rs  media_tests.rs  protocol_tests.rs  ring_buffer_tests.rs  safety_tests.rs  scheduler_tests.rs  shm_tests.rs  volt_boot_integration.rs
builder/content/volt-ram-manager/: Cargo.toml  config.example.toml
builder/content/volt-ram-manager/src/: lib.rs  main.rs  prelude.rs
builder/content/volt-usb-manager/: Cargo.toml  README.md  config.example.toml
builder/content/volt-usb-manager/benches/: compression_bench.rs  flush_bench.rs  journal_bench.rs  read_cache_bench.rs  sbp_usb_bench.rs  write_buffer_bench.rs
builder/content/volt-usb-manager/docs/: ARCHITECTURE.md  PERFORMANCE.md  RECOVERY.md  RECOVERY_PROCEDURE.md  SAFETY.md  SBP_USB.md  SPEC.md
builder/content/volt-usb-manager/examples/: mount_usb.rs  prefetch_assets.rs  recovery_simulation.rs  sbp_status.rs  write_and_flush.rs
builder/content/volt-usb-manager/scripts/: bench.sh  flamegraph.sh  profile.sh  test.sh
builder/content/volt-usb-manager/src/: lib.rs  main.rs  prelude.rs
builder/content/volt-usb-manager/tests/: cache_tests.rs  compression_tests.rs  config_tests.rs  eject_tests.rs  fuse_tests.rs  invariants_tests.rs  journal_tests.rs  recovery_tests.rs  sbp_usb_tests.rs  scheduler_tests.rs  writeback_tests.rs
(+1588 files in other folders)
