[package]
name = "volt-adaptive-system-config"
version = "1.0.0"
edition = "2021"
description = "Samaris OS — Volt Adaptive System Configuration — Hardware-Aware Policy Compiler"

[[bin]]
name = "volt-asc"
path = "src/main.rs"

[features]
default = ["linux", "explain", "profiles"]
linux = []
explain = []
profiles = []
devtools = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
parking_lot = "0.12"
once_cell = "1"
time = { version = "0.3", features = ["formatting", "parsing"] }
num_cpus = "1"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["fs", "ioctl", "mman"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
