[package]
name = "volt-bench"
version = "1.0.0-alpha"
edition = "2021"
description = "Samaris OS Benchmark Suite — measurement, scoring, and optimization layer"

[[bin]]
name = "bench"
path = "src/main.rs"

[lib]
name = "volt_bench"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.33"
anyhow = "1"

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
