[package]
name = "volt-display-manager"
version = "0.1.0-alpha"
edition = "2021"
description = "VOLT Display Manager — Automatic display detection, configuration, and adaptation for Samaris OS"
license = "MIT"

[[bin]]
name = "volt-display-manager"
path = "src/main.rs"

[lib]
name = "volt_display_manager"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
nix = { version = "0.29", features = ["signal"] }
libc = "0.2"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 2
lto = true
strip = true
