[package]
name = "volt-gpu-manager"
version = "3.0.0"
edition = "2021"
description = "Samaris OS — Volt GPU Manager — GPU Orchestration Layer"

[[bin]]
name = "volt-gpu-manager"
path = "src/main.rs"

[features]
default = ["wgpu_backend", "compressed_vram", "shader_cache", "metrics"]
wgpu_backend = ["wgpu", "pollster", "naga"]
vulkan_backend = []
metal_backend = []
null_backend = []
compressed_vram = []
native_texture_compression = []
gpu_zstd_experimental = []
gpu_lz4_experimental = []
multi_gpu = []
thermal = []
devtools = []
shader_cache = []
metrics = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
parking_lot = "0.12"
dashmap = "6"
crossbeam = "0.8"
bytes = "1"
bitflags = "2"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
crc32fast = "1"
once_cell = "1"
smallvec = "1"
time = "0.3"
nix = { version = "0.29", features = ["fs", "ioctl", "mman"] }
glob = "0.3"
ctrlc = "3"
wgpu = { version = "23", optional = true }
pollster = { version = "0.4", optional = true }
naga = { version = "0.20", optional = true }
bytemuck = { version = "1", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[[bench]]
name = "compression_bench"
harness = false

[[bench]]
name = "resource_table_bench"
harness = false

[[bench]]
name = "restore_bench"
harness = false

[[bench]]
name = "sbp_gpu_bench"
harness = false

[[bench]]
name = "scheduler_bench"
harness = false

[[bench]]
name = "shader_cache_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1


