[package]
name = "tesseract-engine"
version = "1.0.0-alpha"
edition = "2021"
description = "Samaris OS Kernel B — Tesseract Engine — Native Rust Acceleration Daemon"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flatbuffers = "24"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
crossbeam = "0.8"
nix = { version = "0.29", features = ["fs", "ioctl", "mman"] }
libc = "0.2"
bytes = "1"
toml = "0.8"
bitflags = "2"
ctrlc = "3"
glob = "0.3"

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bench]]
name = "ipc_bench"
harness = false

[[bench]]
name = "scheduler_bench"
harness = false

[[bench]]
name = "command_bench"
harness = false

[[bench]]
name = "compute_bench"
harness = false

[[bench]]
name = "media_bench"
harness = false

[[bench]]
name = "boot_bench"
harness = false
