[package]
name = "volt-ram-manager"
version = "1.0.0"
edition = "2021"
description = "Samaris OS — Volt RAM Manager — Deterministic Memory Manager"

[features]
default = ["compression", "dedup"]
compression = ["zstd", "lz4_flex"]
dedup = ["sha2"]
numa = []
devtools = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
parking_lot = "0.12"
crossbeam = "0.8"
dashmap = "6"
bytes = "1"
bitflags = "2"
uuid = { version = "1", features = ["v4"] }
sha2 = { version = "0.10", optional = true }
memmap2 = "0.9"
once_cell = "1"
smallvec = "1"
zstd = { version = "0.13", optional = true }
lz4_flex = { version = "0.11", optional = true }

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bench]]
name = "alloc_bench"
harness = false

[[bench]]
name = "compression_bench"
harness = false

[[bench]]
name = "decompression_bench"
harness = false

[[bench]]
name = "dedup_bench"
harness = false

[[bench]]
name = "pressure_bench"
harness = false

[[bench]]
name = "sbp_mem_bench"
harness = false
